<resources>

    <string name="app_name">School</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>


    <string name="type">User is</string>
    <string name="email">Email</string>
    <string name="faculty">Faculty</string>
    <string name="fullName">Full Name</string>
    <string name="phone">Phone</string>
    <string name="year">Year</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logregister">Register</string>
    <string name="backToLog">Back to Log In</string>
    <string name="log_out">Logout</string>
    <string name="showClasses">Show Classes</string>
    <string name="showGrades">Show Grades</string>
    <string name="helloWorld">HelloWorld!</string>
    <string name="showStudents">Show Students</string>
    <string name="saveGrade">Save</string>

    <string name="checkInternet">Check your Internet Connection</string>
    <string name="submit_grade">Submit Grade</string>
    <string name="addGrade">ADD Grade</string>
    <string name="title_activity_show_student_classes">ShowStudentClassesActivity</string>
    <string name="remember_me">Remember me</string>
    <string name="class_name">Class Name</string>
    <string name="grade">Grade</string>
    <string name="student_name">Student Name</string>


</resources>
