<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical"
    tools:context="com.example.barna.shop.ui.LoginActivity"
    android:weightSum="1">


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="@dimen/marginLeft_register"
        android:layout_marginRight="@dimen/marginRight_register"
        android:layout_marginEnd="@dimen/marginRight_register"
        android:layout_marginStart="@dimen/marginLeft_register" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="@dimen/marginTop_register"
        android:layout_marginLeft="@dimen/marginLeft_register"
        android:layout_marginRight="@dimen/marginRight_register"
        android:layout_marginEnd="@dimen/marginRight_register"
        android:layout_marginStart="@dimen/marginLeft_register"/>

    <CheckBox
        android:id="@+id/ch_rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginLeft_register"
        android:layout_marginTop="@dimen/marginTop_register"
        android:text="@string/remember_me"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:height="20dp"
        android:text="@string/log_in"
        android:background="#b30000"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_button"
        android:layout_marginLeft="@dimen/marginLeft_register"
        android:layout_marginRight="@dimen/marginRight_register"
        android:layout_marginEnd="@dimen/marginRight_register"
        android:layout_marginStart="@dimen/marginLeft_register"/>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="20dp"
        android:text="@string/logregister"
        android:background="#00802b"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_button"
        android:layout_marginTop="@dimen/marginTop_register"
        android:layout_marginLeft="@dimen/marginLeft_register"
        android:layout_marginRight="@dimen/marginRight_register"
        android:layout_marginEnd="@dimen/marginRight_register"
        android:layout_marginStart="@dimen/marginLeft_register" />



</LinearLayout>