<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_button"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/marginLeft_register"
            android:layout_marginRight="@dimen/marginRight_register"
            android:layout_marginEnd="@dimen/marginRight_register"
            android:layout_marginStart="@dimen/marginLeft_register" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_button"
            android:layout_marginTop="@dimen/marginTop_register"
            android:layout_marginLeft="@dimen/marginLeft_register"
            android:layout_marginRight="@dimen/marginRight_register"
            android:layout_marginEnd="@dimen/marginRight_register"
            android:layout_marginStart="@dimen/marginLeft_register" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_button"
            android:layout_marginTop="@dimen/marginTop_register"
            android:layout_marginLeft="@dimen/marginLeft_register"
            android:layout_marginRight="@dimen/marginRight_register"
            android:layout_marginEnd="@dimen/marginRight_register"
            android:layout_marginStart="@dimen/marginLeft_register" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:textSize="@dimen/text_size_button"
            android:layout_marginTop="@dimen/marginTop_register"
            android:layout_marginLeft="@dimen/marginLeft_register"
            android:layout_marginRight="@dimen/marginRight_register"
            android:layout_marginEnd="@dimen/marginRight_register"
            android:layout_marginStart="@dimen/marginLeft_register" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:textSize="@dimen/text_size_button"
            android:layout_marginTop="@dimen/marginTop_register"
            android:layout_marginLeft="@dimen/marginLeft_register"
            android:layout_marginRight="@dimen/marginRight_register"
            android:layout_marginEnd="@dimen/marginRight_register"
            android:layout_marginStart="@dimen/marginLeft_register" />
        <EditText
            android:id="@+id/faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/faculty"
            android:inputType="text"
            android:textSize="@dimen/text_size_button"
            android:layout_marginTop="@dimen/marginTop_register"
            android:layout_marginLeft="@dimen/marginLeft_register"
            android:layout_marginRight="@dimen/marginRight_register"
            android:layout_marginEnd="@dimen/marginRight_register"
            android:layout_marginStart="@dimen/marginLeft_register" />
        <EditText
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/year"
            android:textSize="@dimen/text_size_button"
            android:layout_marginTop="@dimen/marginTop_register"
            android:layout_marginLeft="@dimen/marginLeft_register"
            android:layout_marginRight="@dimen/marginRight_register"
            android:layout_marginEnd="@dimen/marginRight_register"
            android:layout_marginStart="@dimen/marginLeft_register" />
        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="@dimen/text_size_button"
            android:layout_marginTop="@dimen/marginTop_register"
            android:layout_marginLeft="@dimen/marginLeft_register"
            android:layout_marginRight="@dimen/marginRight_register"
            android:layout_marginEnd="@dimen/marginRight_register"
            android:layout_marginStart="@dimen/marginLeft_register" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_button"
            android:layout_marginTop="@dimen/marginTop_register"
            android:layout_marginLeft="@dimen/marginLeft_register"
            android:layout_marginRight="@dimen/marginRight_register"
            android:layout_marginEnd="@dimen/marginRight_register"
            android:layout_marginStart="@dimen/marginLeft_register" />
        <Button
            android:id="@id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:height="20dp"
            android:text="@string/register"
            android:background="#00802b"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_button"
            android:layout_marginLeft="@dimen/marginLeft_register"
            android:layout_marginRight="@dimen/marginRight_register"
            android:layout_marginEnd="@dimen/marginRight_register"
            android:layout_marginStart="@dimen/marginLeft_register" />


        <Button
            android:id="@+id/backToLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="20dp"
            android:text="@string/backToLog"
            android:background="#0c5bdc"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_button"
            android:layout_marginTop="@dimen/marginTop_register"
            android:layout_marginLeft="@dimen/marginLeft_register"
            android:layout_marginRight="@dimen/marginRight_register"
            android:layout_marginEnd="@dimen/marginRight_register"
            android:layout_marginStart="@dimen/marginLeft_register"
            android:layout_marginBottom="30dp"/>


    </LinearLayout>


</ScrollView>

